resources/v7m/infra/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: argocd.v7m.hu
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
            path: /
  tls:
    - hosts:
        - argocd.v7m.hu
      secretName: argocd-secret
